# wow_dbc

./: .gitattributes  .gitignore  Cargo.toml  README.md  pre-release.sh
wow_custom_dbc/: Cargo.toml
wow_custom_dbc/src/: main.rs
wow_dbc/: CHANGELOG.md  Cargo.toml  README.md  release.toml
wow_dbc/src/: error.rs  header.rs  lib.rs  tys.rs
wow_dbc/src/tbc_tables/: animation_data.rs  area_poi.rs  area_table.rs  area_trigger.rs  attack_anim_kits.rs  attack_anim_types.rs  auction_house.rs  bank_bag_slot_prices.rs  battlemaster_list.rs  camera_shakes.rs  cfg_categories.rs  cfg_configs.rs  char_base_info.rs  char_hair_geosets.rs  char_hair_textures.rs  char_sections.rs  char_start_outfit.rs  char_titles.rs  char_variations.rs  character_facial_hair_styles.rs  chat_channels.rs  chat_profanity.rs  chr_classes.rs  chr_races.rs  cinematic_camera.rs  cinematic_sequences.rs  creature_display_info.rs  creature_display_info_extra.rs  creature_family.rs  creature_model_data.rs  creature_sound_data.rs  creature_spell_data.rs  creature_type.rs  death_thud_lookups.rs  declined_word.rs  declined_word_cases.rs  durability_costs.rs  durability_quality.rs  emotes.rs  emotes_text.rs  (+146 more)
wow_dbc/src/util/: fp_hacks.rs  mod.rs
wow_dbc/src/vanilla_tables/: animation_data.rs  area_poi.rs  area_table.rs  area_trigger.rs  attack_anim_kits.rs  attack_anim_types.rs  auction_house.rs  bank_bag_slot_prices.rs  camera_shakes.rs  cfg_categories.rs  cfg_configs.rs  char_base_info.rs  char_hair_geosets.rs  char_hair_textures.rs  char_sections.rs  char_start_outfit.rs  char_variations.rs  character_create_cameras.rs  character_facial_hair_styles.rs  chat_channels.rs  chat_profanity.rs  chr_classes.rs  chr_races.rs  cinematic_camera.rs  cinematic_sequences.rs  creature_display_info.rs  creature_display_info_extra.rs  creature_family.rs  creature_model_data.rs  creature_sound_data.rs  creature_spell_data.rs  creature_type.rs  death_thud_lookups.rs  durability_costs.rs  durability_quality.rs  emotes.rs  emotes_text.rs  emotes_text_data.rs  emotes_text_sound.rs  environmental_damage.rs  (+118 more)
wow_dbc/src/wrath_tables/: achievement.rs  achievement_category.rs  achievement_criteria.rs  animation_data.rs  area_group.rs  area_poi.rs  area_table.rs  area_trigger.rs  attack_anim_kits.rs  attack_anim_types.rs  auction_house.rs  bank_bag_slot_prices.rs  banned_add_ons.rs  barber_shop_style.rs  battlemaster_list.rs  camera_shakes.rs  cfg_categories.rs  cfg_configs.rs  char_base_info.rs  char_hair_geosets.rs  char_hair_textures.rs  char_sections.rs  char_start_outfit.rs  char_titles.rs  char_variations.rs  character_facial_hair_styles.rs  chat_channels.rs  chat_profanity.rs  chr_classes.rs  chr_races.rs  cinematic_camera.rs  cinematic_sequences.rs  creature_display_info.rs  creature_display_info_extra.rs  creature_family.rs  creature_model_data.rs  creature_movement_info.rs  creature_sound_data.rs  creature_spell_data.rs  creature_type.rs  (+207 more)
wow_dbc_converter/: Cargo.toml
wow_dbc_converter/src/: error.rs  lib.rs  main.rs  tbc_tables_sqlite.rs  vanilla_tables_sqlite.rs  wrath_tables_sqlite.rs
wow_vanilla_dbc/: CHANGELOG.md  Cargo.toml  README.md
wow_vanilla_dbc/src/: lib.rs  util.rs
wow_vanilla_dbc/src/tables/: animation_data.rs  area_poi.rs  area_table.rs  area_trigger.rs  attack_anim_kits.rs  attack_anim_types.rs  auction_house.rs  bank_bag_slot_prices.rs  camera_shakes.rs  cfg_categories.rs  cfg_configs.rs  char_base_info.rs  char_hair_geosets.rs  char_hair_textures.rs  char_sections.rs  char_start_outfit.rs  char_variations.rs  character_create_cameras.rs  character_facial_hair_styles.rs  chat_channels.rs  chat_profanity.rs  chr_classes.rs  chr_races.rs  cinematic_camera.rs  (+135 more)
(+928 files in other folders)
