[package]
name = "wow_dbc"
version = "0.2.0" # Remember to update docs in src/lib.rs and README.md
edition = "2021"
description = "Library for parsing World of Warcraft DBC files for 1.12, 2.4.3 and 3.3.5."
license = "MIT OR Apache-2.0"
repository = "https://www.github.com/gtker/wow_dbc"
keywords = ["wow", "world-of-warcraft", "mpq", "dbc", "databaseclient"]
categories = ["games", "game-development", "game-engines", "parser-implementations"]
readme = "README.md"
authors = ["Gtker <github@gtker.com"]

[features]
default = []
vanilla = ["wow_world_base/vanilla"]
tbc = ["wow_world_base/tbc"]
wrath = ["wow_world_base/wrath"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
wow_world_base = { git = "https://github.com/gtker/wow_messages.git", rev = "fa9b147d21da8805d2763b55fe2b8b30acbb7343" }
