[package]
name = "wow_dbc_converter"
version = "0.2.0"
edition = "2021"

metadata.release.release = false

[features]
default = []
vanilla = ["wow_dbc/vanilla"]
tbc = ["wow_dbc/tbc"]
wrath = ["wow_dbc/wrath"]

[dependencies]
wow_dbc = { path = "../wow_dbc", features = ["vanilla", "tbc", "wrath"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
clap = { version = "4.0.25", features = ["derive"] }
